[package]
name = "dirhash"
description = "dirhash is a fork of blake3's b3sum to build a hashmap for a directory"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.54"
blake3 = { version = "1.3.1", features = ["rayon"] }
clap = "3.1.0"
hex = "0.4.3"
memmap = "0.7.0"
rayon = "1.5.1"
wild = "2.0.4"
walkdir = "2.3.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"